Added vite base_url

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://hamish-clark.github.io/labelmaker-live/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + Vue + TS</title>
-    <script type="module" crossorigin src="/assets/index.64228a85.js"></script>
-    <link rel="stylesheet" href="/assets/index.6147213f.css">
+    <script type="module" crossorigin src="https://hamish-clark.github.io/labelmaker-live/assets/index.64228a85.js"></script>
+    <link rel="stylesheet" href="https://hamish-clark.github.io/labelmaker-live/assets/index.6147213f.css">
   </head>
   <body>
     <div id="app"></div>
