--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="https://hamish-clark.github.io/labelmaker-live/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=0.5
+    5" />
     <title>Vite + Vue + TS</title>
-    <script type="module" crossorigin src="https://hamish-clark.github.io/labelmaker-live/assets/index.ce998f83.js"></script>
-    <link rel="stylesheet" href="https://hamish-clark.github.io/labelmaker-live/assets/index.49c6be05.css">
+    <script type="module" crossorigin src="https://hamish-clark.github.io/labelmaker-live/assets/index.38f4c5ad.js"></script>
+    <link rel="stylesheet" href="https://hamish-clark.github.io/labelmaker-live/assets/index.5a641f97.css">
   </head>
   <body>
     <div id="app"></div>
