--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="https://hamish-clark.github.io/labelmaker-live/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue + TS</title>
+    <meta name="viewport" content="width=device-width, initial-scale=0.7
+    5" />    <title>LabelMaker</title>
     <script type="module" crossorigin src="https://hamish-clark.github.io/labelmaker-live/assets/index.efaad615.js"></script>
     <link rel="stylesheet" href="https://hamish-clark.github.io/labelmaker-live/assets/index.04bb7e02.css">
   </head>
