--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=0.7
     5" />    <title>LabelMaker</title>
     <!-- <script type="module" crossorigin src="https://hamish-clark.github.io/labelmaker-live/assets/index.be6564c4.js"></script> -->
-    <script type="module" crossorigin src="https://labelmaker.co.nz/assets/index.be6564c4.js"></script>
-    <link rel="stylesheet" href="https://labelmaker.co.nz/assets/index.4c422494.css">
+    <script type="module" crossorigin src="https://www.labelmaker.co.nz/assets/index.be6564c4.js"></script>
+    <link rel="stylesheet" href="https://www.labelmaker.co.nz/assets/index.4c422494.css">
   </head>
   <body>
     <div id="app"></div>
